# looplet

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOOK_GUIDE.md  LICENSE  Makefile  PROVENANCE_GUIDE.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  THIRD_PARTY_USERS.md  cartridge.schema.json  mkdocs.yml  pyproject.toml  pyrightconfig.json  verdict.txt
.githooks/: commit-msg
.github/: copilot-instructions.md  pull_request_template.md
demo/: looplet_new.cast  looplet_new_demo.sh  looplet_pretty.cast  looplet_pretty_demo.sh
docs/: agent-factory.md  api.md  artifacts.md  benchmarks.md  cartridge.md  changelog.md  cli.md  demo-script.md  demo.cast  discussions-seed.md  evals.md  experiments.md  faq.md  good-first-issues.md  hooks.md  index.md  install.md  migrate.md  operations.md  pitfalls.md  portability.md  provenance.md  quickstart.md  recipes.md  regression-demo.md  requirements.txt  roadmap.md  skills.md  troubleshooting.md  tutorial.md  why-looplet.md  workspace.md
scripts/: bench_cold_import.py  bench_dep_footprint.py  check_text_style.py  pre-commit.sh  pre-push.sh  smoke_built_wheel.py
tests/: conftest.py  test_agents_md_memory.py  test_approval_hook_smoke.py  test_approval_protocol.py  test_async_loop.py  test_async_loop_smoke.py  test_backend_context_window.py  test_backends.py  test_budget_continuation_smoke.py  test_budget_smoke.py  test_bundled_cartridges.py  test_bundles_smoke.py  test_cache_smoke.py  test_cartridge.py  test_cartridge_aliases.py  test_cartridge_evals_bundle.py  test_cartridge_evals_roundtrip.py  (+171 more)
(+611 files in other folders)
