[project]
name = "openharness"
version = "0.1.5"
description = "A composable, tool-calling LLM agent harness (the inner loop, extracted from cadence)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-timeout>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --timeout=30"
asyncio_mode = "auto"
markers = [
    "smoke: fast smoke tests",
    "integration: integration tests",
    "slow: slow tests",
]
